@@ -9,7 +9,7 @@ test: $(CXX)-test
 copy: $(CXX)-copy
 verify: $(CXX)-verify
 doc: $(CXX)-docs
-shared: g++-shared
+shared: $(CXX)-shared
 install: $(CXX)-install
 clean: $(CXX)-clean
 
@@ -43,6 +43,10 @@ cl-copy:
 	cd contrib& nmake copy
 cl-verify:
 	cd tests& nmake verify
+cl-shared:
+	cd src& nmake shared
+	cd contrib& nmake shared
+	nmake cl-copy
 cl-install:
 	cd src& nmake install
 cl-clean:
@@ -71,7 +75,9 @@ g++-copy:
 g++-verify:
 	$(MAKE) --directory=tests CC=gcc CXX=g++ verify
 g++-shared:
-	$(MAKE) --directory=src CC=gcc CXX=g++ BUILD_SHARED_LIBRARY=1 all shared
+	$(MAKE) --directory=src CC=gcc CXX=g++ CXXFLAGS=-fPIC shared
+	$(MAKE) --directory=contrib CC=gcc CXX=g++ CXXFLAGS=-fPIC shared
+	$(MAKE) g++-copy
 g++-install:
 	$(MAKE) --directory=src CC=gcc CXX=g++ install
 g++-clean:
@@ -99,6 +105,10 @@ clang++-copy:
 	$(MAKE) --directory=contrib copy
 clang++-verify:
 	$(MAKE) --directory=tests CC=clang CXX=clang++ verify
+clang++-shared:
+	$(MAKE) --directory=src CC=clang CXX=clang++ CXXFLAGS=-fpic shared
+	$(MAKE) --directory=contrib CC=clang CXX=clang++ CXXFLAGS=-fpic shared
+	$(MAKE) clang++-copy
 clang++-install:
 	$(MAKE) --directory=src CC=clang CXX=clang++ install
 clang++-clean:
@@ -126,6 +136,10 @@ c++-copy:
 	$(MAKE) --directory=contrib copy
 c++-verify:
 	$(MAKE) --directory=tests CC=cc CXX=c++ verify
+c++-shared:
+	$(MAKE) --directory=src CC=cc CXX=c++ CXXFLAGS=-fPIC shared
+	$(MAKE) --directory=contrib CC=cc CXX=c++ CXXFLAGS=-fPIC shared
+	$(MAKE) c++-copy
 c++-install:
 	$(MAKE) --directory=src CC=cc CXX=c++ install
 c++-clean:
@@ -153,6 +167,10 @@ CC-copy:
 	$(MAKE) --directory=contrib copy
 CC-verify:
 	$(MAKE) --directory=tests CC=cc CXX=CC verify
+CC-shared:
+	$(MAKE) --directory=src CC=cc CXX=CC CXXFLAGS=-fpic shared
+	$(MAKE) --directory=contrib CC=cc CXX=CC CXXFLAGS=-fpic shared
+	$(MAKE) CC-copy
 CC-install:
 	$(MAKE) --directory=src CC=cc CXX=CC install
 CC-clean:
@@ -180,6 +198,10 @@ icpc-copy:
 	$(MAKE) --directory=contrib copy
 icpc-verify:
 	$(MAKE) --directory=tests CC=icc CXX=icpc verify
+icpc-shared:
+	$(MAKE) --directory=src CC=icc CXX=icpc CXXFLAGS=-fpic shared
+	$(MAKE) --directory=contrib CC=icc CXX=icpc CXXFLAGS=-fpic shared
+	$(MAKE) icpc-copy
 icpc-install:
 	$(MAKE) --directory=src CC=icc CXX=icpc install
 icpc-clean:
@@ -207,6 +229,10 @@ openCC-copy:
 	$(MAKE) --directory=contrib copy
 openCC-verify:
 	$(MAKE) --directory=tests CC=opencc CXX=openCC verify
+openCC-shared:
+	$(MAKE) --directory=src CC=opencc CXX=openCC CXXFLAGS=-fPIC shared
+	$(MAKE) --directory=contrib CC=opencc CXX=openCC CXXFLAGS=-fPIC shared
+	$(MAKE) openCC-copy
 openCC-install:
 	$(MAKE) --directory=src CC=opencc CXX=openCC install
 openCC-clean:
